# vla

./: .gitignore  .gitmodules  Open_X_Embodiment_Datasets.ipynb  README.md  correspondences2poses.py  data_playground.ipynb  ee_traj_2d.npy  ee_traj_6d.npy  example.py  gripper_classifier.pth  gripper_classifier.py  interactive.sh  load_data_from_bridge.py  main.py  pose_verify.py  project_matrix.npy  pyproject.toml
configs/calvin_finetune/: finetune_flamingo_mpt_3b_ws-8_act-10_lstm_calvin.json  (+7 more)
data/: img_ext.tar
data_preprocessing/: 2d_tracks_extraction.py  correspondences2poses.py  dinov2_small_debug.py  ee_tracks_extraction.py  ee_tracks_extraction_mulGPU.py  ee_tracks_extractionv2.py  ee_tracks_extractionv2_mulGPU.py  ee_tracks_extractionv2_tfds.py  feat_fetching.py  feat_fetchingv2.py  get_hard_samples.py  gripper_classifier.py  job_submit.sh  masks2traj.py  run_preproc.sh  task_list.py  train_gripper_classifier.py  utils.py  visualize_cams.py
dataloader_debug/: verify.py
dataloader_debug/tmp/: traj_transforms.py
gripper_anno/: bgr2rgb.py  json2png.py
scripts/: bridge.bash  openvla_drawer_visual_matching.sh  openvla_move_near_visual_matching.sh  openvla_pick_coke_can_visual_matching.sh  openvla_put_in_drawer_visual_matching.sh  run.sh  run_eval_raw_ddp_torchrun.sh  run_eval_raw_ddp_torchrun_test.sh  run_test.sh  setup_calvin.sh  setup_simplerenv.sh
tools/: convert_deepspeed_to_fp32.py  global_progress_update.py  merge_hdf5.py  merge_json.py  merge_jsonl.py  merge_multi_rank_res.py  merge_videos.py  modeling_kosmos2.py  visualize_cams.py  write_to_tfds.py
(+131 files in other folders)
