
[build-system]
requires = ["setuptools>=57.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robovlms"
version = "0.0.1"
description = "RoboVLMs for Finetuning VLMs on Robot Data"
# authors = ["Xinghang Li <lixingha23@mails.tsinghua.edu.cn>", "Hanbo Zhang", "Minghuan Liu"]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies=[
    "torch==2.3.1",
    "torchvision>=0.10.0",
    "pytorch-lightning>=1.8.6",
    "PyYAML>=6.0",
    "lightning>=2.2.5",
    "lightning-lite>=1.8.6",
    "lightning-utilities>=0.8.0",
    "flamingo-pytorch>=0.1.2",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.1.1",
    "deepspeed>=0.15.0",
    "tensorboard>=2.13.0",
    "tensorboardX>=2.6.2",
    "tqdm>=4.65.0",
    "transformers==4.37.2",
    "diffusers>=0.31.0",
    "wandb>=0.19.0",
    "numpy<2.0",
    "sentence-transformers==2.2.2",
    "open_clip_torch==2.20.0",
    "datasets==2.12.0"
]

[project.urls]
"Homepage" = "https://robovlms.github.io"
"Bug Tracker" = "https://github.com/Robot-VLAs/RoboVLMs/issues"

[tool.setuptools.packages.find]
exclude = ["bash*", "imgs*", "eval", "tools*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["bash*", "imgs*", "eval", "tools*", "scripts*", "tests*"]
